; ModuleID = '/home/carl/AnghaBench/linux/arch/xtensa/kernel/extr_smp.c_ipi_flush_cache_page.c'
source_filename = "/home/carl/AnghaBench/linux/arch/xtensa/kernel/extr_smp.c_ipi_flush_cache_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.flush_data = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @ipi_flush_cache_page to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ipi_flush_cache_page(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.flush_data*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.flush_data*
  store %struct.flush_data* %5, %struct.flush_data** %3, align 8
  %6 = load %struct.flush_data*, %struct.flush_data** %3, align 8
  %7 = getelementptr inbounds %struct.flush_data, %struct.flush_data* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.flush_data*, %struct.flush_data** %3, align 8
  %10 = getelementptr inbounds %struct.flush_data, %struct.flush_data* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.flush_data*, %struct.flush_data** %3, align 8
  %13 = getelementptr inbounds %struct.flush_data, %struct.flush_data* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @local_flush_cache_page(i32 %8, i32 %11, i32 %14)
  ret void
}

declare dso_local i32 @local_flush_cache_page(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
